
*****************************
   MyBlitzortung Changelog
*****************************

Version 0.6a (2011-08-10)
------------------------
- new: strike rates for region
- fix: performance issue in statistics

Version 0.6 (2011-08-05)
------------------------
- new: regions (use i.e. &mark=germany on map image to see the area)
- new: spectrum of raw signals
- new: a lot of advanced statistics
- avoid url retrieving with 'file_get_contents' (thx to a2700franz) 
- headers
- palette images

Version 0.5.3 (2011-07-13)
---------------------------
- new: added default graph times (BO_GRAPH_STAT_HOURS_BACK, BO_GRAPH_STAT_HOURS_BACK_STATIONS)
- new: search strike by date/time-range for users with permission
- fix: wrong time on "station statistics" displayed when station is offline
- fix: update-code improved
- fixed a some other small bugs

Version 0.5.2 (2011-07-06)
---------------------------
IMPORTANT: You have to update the database (log in), otherwise strike import won't work anymore
- improved: strike search (faster, unlimitied for users with permission)
- improved: behaviour on active station count changed ("available stations" added, offline = no signals)
- fix: dynamic map not working on very fast internet connections (race condition)
- added wetterinfo overlay

Version 0.5.1c (2011-06-27)
---------------------------
- fixes
- dark map of bavaria

Version 0.5.1b (2011-06-24)
---------------------------
- fix: cookie issue on dynamic map (map not displayed on second visit)

Version 0.5.1a (2011-06-24)
---------------------------
- fix: Javascript error when logged in as admin (More button not working)
- fix: login with userid 1 was possible with different user/password from database userid 1
- improvement: loading map through google callback method
- improvement: show user levels in user table

Version 0.5.1 (2011-06-23)
--------------------------
- new: added some overlay templates (radar, blids, euclid - for private internal usage only!)